Implement pending client requirement changes
